syntax = "proto3";

package calculator;

option go_package = "calculator/calculatorpb";

message SumRequest {
    int32 first_number = 1;
    int32 second_number = 2;
}
message SumRepsonse {
    int32 result = 1;
}
message PrimeNumberDecompositionRequest{
    int32 number = 1;
}
message PrimeNumberDecompositionResponse{
    int32 result = 1;
}
message ComputeAverageRequest{
    int32 number = 1;
}
message ComputeAverageResponse{
    double result = 1;
}
message FindMaximumValueRequest{
    int32 number = 1;
}
message FindMaximumValueResponse{
    int32 result = 1;
}
service CalculatorService {
    // Unery sum service
    rpc Sum (SumRequest) returns (SumRepsonse){};
    
     // Server Streaming
    rpc PrimeNumberDecomposition (PrimeNumberDecompositionRequest) returns (stream  PrimeNumberDecompositionResponse){};
     
    // Client Streaming
    rpc ComputeAverage (stream ComputeAverageRequest) returns (ComputeAverageResponse){};

    //Bidi Streaming
    rpc FindMaximumValue(stream FindMaximumValueRequest) returns (stream FindMaximumValueResponse){};

    // find square root 
    // send error codde in 
}
